tests/baselines/reference/renamingDestructuredPropertyInFunctionType.errors.txt
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(5,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(6,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(7,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(8,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(10,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(15,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(16,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(17,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(18,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(20,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(26,16): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(29,9): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(32,13): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?


==== tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts (13 errors) ====
    // GH#37454, GH#41044
    
    type O = { a?: string; b: number; c: number; };
    type F1 = (arg: number) => any; // OK
    type F2 = ({ a: string }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F3 = ({ a: string, b, c }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F4 = ({ a: string }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F5 = ({ a: string, b, c }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F6 = ({ a: string }) => typeof string; // OK
    type F7 = ({ a: string, b: number }) => typeof number; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F8 = ({ a, b: number }) => typeof number; // OK
    type F9 = ([a, b, c]) => void; // Error
    
    type G1 = (arg: number) => any; // OK
    type G2 = ({ a: string }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G3 = ({ a: string, b, c }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G4 = ({ a: string }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G5 = ({ a: string, b, c }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G6 = ({ a: string }) => typeof string; // OK
    type G7 = ({ a: string, b: number }) => typeof number; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G8 = ({ a, b: number }) => typeof number; // OK
    type G9 = ([a, b, c]) => void; // Error
    
    interface I {
      method1(arg: number): any; // OK
      method2({ a: string }): any; // Error
                   ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    
      (arg: number): any; // OK
      ({ a: string }): any; // Error
            ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    
      new (arg: number): any; // OK
      new ({ a: string }): any; // Error
                ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    }
    
    // Below are OK but renaming should be removed from declaration emit
    function f1({ a: string }: O) { }
    const f2 = function({ a: string }: O) { };
    const f3 = ({ a: string, b, c }: O) => { };
    const f4 = function({ a: string }: O): typeof string { return string; };
    const f5 = ({ a: string, b, c }: O): typeof string => '';
    const obj1 = {
      method({ a: string }: O) { }
    };
    const obj2 = {
      method({ a: string }: O): typeof string { return string; }
    };
    function f6({ a: string = "" }: O) { }
    const f7 = ({ a: string = "", b, c }: O) => { };
    
    // In below case `string` should be kept because it is used
    function f8({ a: string = "" }: O): typeof string { return "a"; }